Mejorado el getFields.