@@ -1,5 +1,10 @@
 package com.todolist.dtos;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
 import com.todolist.entity.User;
 import lombok.Getter;
 import lombok.Setter;
@@ -48,28 +53,17 @@ public class ShowUser {
     }
 
     public Map<String, Object> getFields(String fieldsUser, String fieldsTask) {
-        List<String> attributesShown = Stream.of(fieldsUser.split(",")).map(String::trim).collect(Collectors.toList());
-        Map<String, Object> map = new TreeMap<>();
-        for (String attribute : attributesShown) {
-            if (Objects.equals(attribute.toLowerCase(), "iduser"))
-                map.put("idUser", getIdUser());
-            else if (Objects.equals(attribute.toLowerCase(), "name"))
-                map.put("name", getName());
-            else if (Objects.equals(attribute.toLowerCase(), "surname"))
-                map.put("surname", getSurname());
-            else if (Objects.equals(attribute.toLowerCase(), "email"))
-                map.put("email", getEmail());
-            else if (Objects.equals(attribute.toLowerCase(), "avatar"))
-                map.put("avatar", getAvatar());
-            else if (Objects.equals(attribute.toLowerCase(), "bio"))
-                map.put("bio", getBio());
-            else if (Objects.equals(attribute.toLowerCase(), "location"))
-                map.put("location", getLocation());
-            else if (Objects.equals(attribute.toLowerCase(), "taskCompleted"))
-                map.put("taskcompleted", getTaskCompleted());
-            else if (Objects.equals(attribute, "tasks"))
-                map.put("tasks", getTasks().stream().map(task -> task.getFields(fieldsTask)).collect(Collectors.toList()));
-        }
+        List<String> attributes = Stream.of(fieldsUser.split(",")).map(String::trim).toList();
+        List<String> attributesNotNeeded = Stream.of(ALL_ATTRIBUTES.split(",")).map(String::trim).filter(attribute -> !attributes.contains(attribute)).toList();
+        ObjectMapper mapper = new ObjectMapper()
+                .registerModule(new ParameterNamesModule())
+                .registerModule(new Jdk8Module())
+                .registerModule(new JavaTimeModule())
+                .configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
+        Map<String, Object> map = mapper.convertValue(this, Map.class);
+        for (String attribute : attributesNotNeeded) map.remove(attribute);
+        if (attributes.contains("tasks"))
+            map.put("tasks", getTasks().stream().map(task -> task.getFields(fieldsTask)).toList());
         return map;
     }
 }
